third_party/rust/chromium_crates_io/vendor/serde_json-1.0.78/tests/ui/unexpected_after_map_entry.stderr
error: no rules expected the token `=>`
 --> tests/ui/unexpected_after_map_entry.rs:4:23
  |
4 |     json!({ "k": true => });
  |                       ^^ no rules expected this token in macro call
